{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 29,
  "lineage": "befdc0e9-8d57-1271-6a9d-b66cd19732e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a8a726c4dbec0bfb",
            "public_dns": "ec2-52-68-173-195.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.68.173.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-ivy-natgw-1a"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04f5ec980ed309698",
            "public_dns": "ec2-54-150-213-6.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.150.213.6",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-ivy-natgw-1c"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-004f9058e5f475d2f",
            "public_dns": "ec2-54-238-75-170.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.75.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-ivy-natgw-1d"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cc9265217f18d11d",
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8a726c4dbec0bfb",
            "id": "nat-00415a150d94b910c",
            "network_interface_id": "eni-098eaab2e59cbe6e6",
            "private_ip": "10.10.1.9",
            "public_ip": "52.68.173.195",
            "subnet_id": "subnet-066a4e3eb5aad856c"
          },
          "depends_on": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_subnet.az1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f5ec980ed309698",
            "id": "nat-03b5f92198a4159d0",
            "network_interface_id": "eni-0bb41825e4e5ee011",
            "private_ip": "10.10.2.203",
            "public_ip": "54.150.213.6",
            "subnet_id": "subnet-0942835bed403b57b"
          },
          "depends_on": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_subnet.az2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004f9058e5f475d2f",
            "id": "nat-0317594146553402f",
            "network_interface_id": "eni-0bbeecfc87ff95c59",
            "private_ip": "10.10.3.27",
            "public_ip": "54.238.75.170",
            "subnet_id": "subnet-09e018656e945d6d0"
          },
          "depends_on": [
            "aws_eip.nat_gateway_2",
            "aws_internet_gateway.example",
            "aws_subnet.az3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc9265217f18d11d",
            "id": "r-rtb-0d4778c7372ba55f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d4778c7372ba55f7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.example",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ea6f6398564f51151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-00415a150d94b910c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea6f6398564f5115",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gateway_0",
            "aws_route_table.private_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e3db7064be5fdf2a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03b5f92198a4159d0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3db7064be5fdf2a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08782632d37b222581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0317594146553402f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08782632d37b22258",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ea6f6398564f5115",
            "owner_id": "198098511860",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-ivy-private-1a"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e3db7064be5fdf2a",
            "owner_id": "198098511860",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-ivy-private-1c"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08782632d37b22258",
            "owner_id": "198098511860",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-ivy-private-1d"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d4778c7372ba55f7",
            "owner_id": "198098511860",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-ivy-public"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cbe8f9f39450f3d",
            "route_table_id": "rtb-0d4778c7372ba55f7",
            "subnet_id": "subnet-066a4e3eb5aad856c"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.az1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02aec6c20f1c39895",
            "route_table_id": "rtb-0d4778c7372ba55f7",
            "subnet_id": "subnet-0942835bed403b57b"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.az2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ede727730ed77d",
            "route_table_id": "rtb-0d4778c7372ba55f7",
            "subnet_id": "subnet-09e018656e945d6d0"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.az3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aecd03752d5ed3ce",
            "route_table_id": "rtb-0ea6f6398564f5115",
            "subnet_id": "subnet-0c6f58b71e969f7a9"
          },
          "depends_on": [
            "aws_route_table.private_0",
            "aws_subnet.private_az1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09399d86cb991ed8c",
            "route_table_id": "rtb-0e3db7064be5fdf2a",
            "subnet_id": "subnet-02d1e48d204a39599"
          },
          "depends_on": [
            "aws_route_table.private_1",
            "aws_subnet.private_az2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0375a57ecd648e37b",
            "route_table_id": "rtb-08782632d37b22258",
            "subnet_id": "subnet-0119c523d705d31a7"
          },
          "depends_on": [
            "aws_route_table.private_2",
            "aws_subnet.private_az3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-066a4e3eb5aad856c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-066a4e3eb5aad856c",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-1a"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0942835bed403b57b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0942835bed403b57b",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-1c"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-09e018656e945d6d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-09e018656e945d6d0",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-1d"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0c6f58b71e969f7a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.64.0/24",
            "id": "subnet-0c6f58b71e969f7a9",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-private_1a"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-02d1e48d204a39599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.65.0/24",
            "id": "subnet-02d1e48d204a39599",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-private_1c"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0119c523d705d31a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.66.0/24",
            "id": "subnet-0119c523d705d31a7",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy-private_1d"
            },
            "vpc_id": "vpc-0d376a59c9162e609"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:vpc/vpc-0d376a59c9162e609",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-033d58fcb0ac4c879",
            "default_route_table_id": "rtb-085bd78db1b7e4290",
            "default_security_group_id": "sg-0307af8a7c2efd43d",
            "dhcp_options_id": "dopt-3233cf55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d376a59c9162e609",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-085bd78db1b7e4290",
            "owner_id": "198098511860",
            "tags": {
              "Name": "test-ivy"
            }
          }
        }
      ]
    }
  ]
}